:bug: Align the height of the buttons in the navigation

--- a/website/website/static/sass/partials/_navigation.scss
+++ b/website/website/static/sass/partials/_navigation.scss
@@ -21,6 +21,10 @@ $logo-fallback-margin-top:  - ($logo-height + 10px);
   line-height: $line-height;
   padding: $navigation-padding 0;
 
+  ul button.btn {
+    margin-top: -2px; // To match a .btn
+  }
+
   .dropdown-content {
     width: auto !important;
   }
